--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="title">
+        <h1>Tic Tac Toe</h1>
+    </div>
+    <div class="header">
+        <h2></h2>
+    </div>
+    <div class="board"></div>
     <script src="app.js"></script>
 </body>
 </html>
