--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="title">
-        <h1>Tic Tac Toe</h1>
-    </div>
-    <div class="header">
-        <h2></h2>
+    <div class="container">
+        <div class="title">
+            <h1>Tic Tac Toe</h1>
+        </div>
+        <div class="header">
+            <h2></h2>
+        </div>
     </div>
     <div class="board"></div>
     <script src="app.js"></script>
