add winning message and restart functionality

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         </div>
     </div>
     <div class="board"></div>
+    <dialog>
+        <h1></h1>
+        <button autofocus>Restart Game</button>
+    </dialog>
     <script src="app.js"></script>
 </body>
 </html>
